--- a/Exercicios/ex022/fundo002.html
+++ b/Exercicios/ex022/fundo002.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    
+    <div>
+        <h1>
+            Teste de imagem de fundo
+           </h1>
+           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis aspernatur architecto porro in, exercitationem natus pariatur velit ullam odio, sit facilis cupiditate. Recusandae earum culpa quod alias libero sapiente exercitationem. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga iste alias culpa totam magni. Explicabo autem sed, facere dolorem deleniti dolorum placeat sit! Laboriosam, ullam quisquam? Vitae voluptatum maxime at.</p>
+    </div>
     
 </body>
 </html>
