--- a/Exercicios/ex022/fundo004.html
+++ b/Exercicios/ex022/fundo004.html
@@ -3,31 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style3.css">
+    <title>fundo</title>
+    <link rel="stylesheet" href="style4.css">
 </head>
 <body>
-
-    <div class="bloco" id="q1">
-
-    </div>
-
-
-    
-    <div class="bloco" id="q2">
+    <div class="quadrado" id="q1">
 
     </div>
 
 
-
-    <div class="bloco" id="q3">
+    <div class="quadrado" id="q2">
 
     </div>
 
 
+    <div class="quadrado" id="q3">
 
-
-
-
+    </div>
 </body>
 </html>
