--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -9,7 +9,8 @@
 <body>
     <main>
         <h1>Teste de imagens</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, natus. Qui, reiciendis! Itaque quia, ea facere libero commodi distinctio aut provident iusto doloribus blanditiis laboriosam sed aperiam. Praesentium, libero at?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro ex, pariatur hic, sequi voluptas exercitationem assumenda ad sint totam aut autem! Voluptatem fuga odio pariatur. Culpa veritatis quisquam labore itaque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vel deserunt culpa deleniti omnis. Corporis quis porro qui vero blanditiis a ipsa minus error officia, cumque natus similique eum dignissimos.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, natus. Qui, reiciendis! Itaque quia, ea facere libero commodi distinctio aut provident iusto doloribus blanditiis laboriosam sed aperiam. Praesentium, libero at?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro ex, pariatur hic, sequi voluptas exercitationem assumenda ad sint totam aut autem! Voluptatem fuga odio pariatur. Culpa veritatis quisquam labore itaque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vel deserunt culpa deleniti omnis. Corporis quis porro qui vero blanditiis a ipsa minus error officia, cumque natus similique eum dignissimos. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos quasi odit voluptatem blanditiis odio recusandae rem, illum non veniam hic eligendi eveniet a ea. Ducimus ipsa provident quaerat. Necessitatibus, vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos incidunt impedit voluptatibus? Quam, delectus dicta neque autem molestias reprehenderit officiis iure. Maiores itaque aut illum omnis ipsa asperiores tenetur accusamus?</p>
     </main>
+
 </body>
 </html>
