--- a/Desafíos/dd006/index.html
+++ b/Desafíos/dd006/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Tags em HTML</h1>
 <ul type="square" >
-    <li><abbr title="use a tag <p>">Parágrafos</abbr></li>
+    <li><abbr title="use a tag p">Parágrafos</abbr></li>
     <li><abbr title="use a tag <img src">Imagens</abbr></li>   
         
 </ul>
