--- a/Desafíos/dd012/index.html
+++ b/Desafíos/dd012/index.html
@@ -11,10 +11,9 @@
 </head>
 <body>
     <header>
-        <div class="caixah1">
-            <h1>Cordel Moderno</h1>
-        </div>
-    <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte </a></p>
+        <h1>Cordel Moderno<h1>
+
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte </a></p>
 </header>
 
 
@@ -110,7 +109,7 @@
     </p>
 </section>
 
-<footer>site criado por <a href="#">Eduardo</a></footer>
+<footer><p>site criado por <a href="#">Eduardo</a></p></footer>
 
 
 
