--- a/Desafíos/dd012/index.html
+++ b/Desafíos/dd012/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+        </style>
 
     <title>Cordel Moderno</title>
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -34,7 +36,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="um">
         <p>
          Não é mais como era antes 
          <br>
@@ -89,7 +91,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="dois">
         <p>
             Tenho saudade das cartas
              <br>
@@ -144,7 +146,7 @@
         </p>
     </section>
 
-<footer><p>site criado por <a href="#">.</a></p></footer>
+<footer><p>Site criado por <a href="https://github.com/EduardoFrugeri/" target="_blank"><em>Eduardo</em> </a></p></footer>
 
 
 
