--- a/Exercicios/ex024/index.html
+++ b/Exercicios/ex024/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <style>
+        iframe{
+            width: 600px;
+            height: 300px;
+            border: 4px solid rgb(56, 143, 29);
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando iframe</h1>
     <p>Acessando o 
 
-        <iframe src="https://www.google.com" frameborder="2"></iframe>
+        <!--Tamanho padrão 300 x 150-->
+        <iframe src="https://eduardofrugeri.github.io/projeto-fextec/" frameborder="0">
+
+        <a href="https://eduardofrugeri.github.io/projeto-fextec/" target="_blank">Projeto</a>
+        </iframe>
+    </p>
+
+    <p>
 
     </p>
 
