--- a/Exercicios/ex024/index.html
+++ b/Exercicios/ex024/index.html
@@ -7,19 +7,35 @@
     
     <style>
         iframe{
-            width: 600px;
-            height: 300px;
+            display: block;
+            margin: auto;
+            width: 500px;
+            height: 400px;
             border: 4px solid rgb(56, 143, 29);
             border-radius: 5px;
         }
+        
+
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+
     </style>
 </head>
 <body>
+
     <h1>Testando iframe</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt obcaecati soluta explicabo commodi maxime maiores, praesentium vitae eius blanditiis possimus placeat, aliquam aspernatur mollitia voluptatum saepe perferendis. Assumenda, ipsam. Quae.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quo tempore ad earum quisquam neque. Placeat repellat quod aperiam facere aliquam soluta culpa quisquam a voluptas aspernatur, sunt ipsum tempore!</p>
+
     <p>Acessando o 
 
         <!--Tamanho padrão 300 x 150-->
-        <iframe src="https://eduardofrugeri.github.io/projeto-fextec/" frameborder="0">
+        <iframe src='pagina001.html' frameborder="0">
 
         <a href="https://eduardofrugeri.github.io/projeto-fextec/" target="_blank">Projeto</a>
         </iframe>
