--- a/Exercicios/ex026/mq005/index.html
+++ b/Exercicios/ex026/mq005/index.html
@@ -13,7 +13,7 @@
     <i class="material-symbols-outlined" onclick="clickMenu()" id="imenu">
         menu
         </i>
-    <menu id="itens">
+    <nav id="itens">
         <ul>
             <li><a href="#">opção 1</a></li>
             <li><a href="#">opção 2</a></li>
@@ -21,7 +21,7 @@
             <li><a href="#">opção 4</a></li>
             <li><a href="#">opção 5</a></li>
         </ul>
-    </menu>
+    </nav>
 </header>
    
     <main>
