--- a/Exercicios/ex026/mq005/index.html
+++ b/Exercicios/ex026/mq005/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste</title>
-    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/style.css" media="screen">
     <link rel="stylesheet" href="estilos/celular.css">
-
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
 </head>
-<body>
+<body onresize="mudoutamanho()">
 <header><h1>Meu site</h1>
     <i class="material-symbols-outlined" onclick="clickMenu()" id="imenu">
         menu
@@ -36,6 +34,14 @@
     </main>
     
     <script>
+        function mudoutamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            } else {
+                itens.style.display = 'none'
+            }
+        }
+
         function clickMenu(){
            
             if (itens.style.display == 'block') {
